@@ -5,7 +5,7 @@ Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.a
 Uploaders: Loic Minier <lool@dooz.org>,
            Sebastian Dröge <slomo@debian.org>,
            Sjoerd Simons <sjoerd@debian.org>
-Build-Depends: libgstreamer1.0-dev (>= 0.11.90),  libraw1394-dev (>= 2.0.0) [linux-any] , libiec61883-dev (>= 1.0.0) [linux-any] , libavc1394-dev [linux-any] , libv4l-dev [linux-any] , libgudev-1.0-dev (>= 143) [linux-any], libgstreamer-plugins-base1.0-dev (>= 0.11.90), autotools-dev, dh-autoreconf, automake (>= 1.10), autoconf (>= 2.60), libtool (>= 2.0), autopoint (>= 0.17), cdbs (>= 0.4.93), debhelper (>= 8.1.3), dpkg-dev (>= 1.15.1), pkg-config (>= 0.11.0), gtk-doc-tools, libglib2.0-dev (>= 2.31.14), liborc-0.4-dev (>= 1:0.4.11), libcairo2-dev (>= 1.10.0), libcaca-dev, libspeex-dev (>= 1.1.6), libpng-dev, libshout3-dev, libjpeg-dev, libaa1-dev (>= 1.4p5), libflac-dev (>= 1.1.4), libdv4-dev | libdv-dev, libxdamage-dev, libxext-dev, libxfixes-dev, libxv-dev, libxml2-dev, libgtk2.0-dev (>= 2.8), libtag1-dev (>= 1.5), libwavpack-dev (>= 4.20), gstreamer1.0-plugins-base (>= 0.11.90), libsoup-gnome2.4-dev (>= 2.26), libpulse-dev (>= 1.0), libbz2-dev, gstreamer1.0-doc, gstreamer1.0-plugins-base-doc, libjack-dev (>= 1:0.99.10)
+Build-Depends: libgstreamer1.0-dev (>= 0.11.91),  libraw1394-dev (>= 2.0.0) [linux-any] , libiec61883-dev (>= 1.0.0) [linux-any] , libavc1394-dev [linux-any] , libv4l-dev [linux-any] , libgudev-1.0-dev (>= 143) [linux-any], libgstreamer-plugins-base1.0-dev (>= 0.11.91), autotools-dev, dh-autoreconf, automake (>= 1.10), autoconf (>= 2.60), libtool (>= 2.0), autopoint (>= 0.17), cdbs (>= 0.4.93), debhelper (>= 8.1.3), dpkg-dev (>= 1.15.1), pkg-config (>= 0.11.0), gtk-doc-tools, libglib2.0-dev (>= 2.31.14), liborc-0.4-dev (>= 1:0.4.11), libcairo2-dev (>= 1.10.0), libcaca-dev, libspeex-dev (>= 1.1.6), libpng-dev, libshout3-dev, libjpeg-dev, libaa1-dev (>= 1.4p5), libflac-dev (>= 1.1.4), libdv4-dev | libdv-dev, libxdamage-dev, libxext-dev, libxfixes-dev, libxv-dev, libxml2-dev, libgtk2.0-dev (>= 2.8), libtag1-dev (>= 1.5), libwavpack-dev (>= 4.20), gstreamer1.0-plugins-base (>= 0.11.91), libsoup-gnome2.4-dev (>= 2.26), libpulse-dev (>= 1.0), libbz2-dev, gstreamer1.0-doc, gstreamer1.0-plugins-base-doc, libjack-dev (>= 1:0.99.10)
 Standards-Version: 3.8.4
 
 Package: gstreamer1.0-plugins-good-doc
